deploy/k8s/apps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marvin-apps
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/configuration-snippet: 'more_set_headers "Content-Security-Policy:
      frame-ancestors ''self'' https://marvin.example.com";

      '
spec:
  ingressClassName: nginx
  rules:
  - host: marvin-3000.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-3001.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-4000.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-4200.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-5000.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-5173.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-5174.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-8000.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-8001.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-8080.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-8501.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-8888.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
  - host: marvin-9000.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: marvin-apps
            port:
              number: 8081
